--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,13 @@
   display: flex;
   text-align: center;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
