--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,9 @@
   padding: 0;
   display: flex;
   text-align: center;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
 
 input::-webkit-outer-spin-button,
